# nope-the-hoop

./: Cargo.toml  LICENSE.txt  README.md
client/: Cargo.toml
client/src/: ball.rs  connection.rs  hoop.rs  main.rs
proto/: Cargo.toml
proto/src/: lib.rs  message.rs  state.rs  stream.rs  sync.rs
server/: Cargo.toml
server/src/: host.rs  main.rs  sim.rs  sync_read.rs
