[package]
name = "nope-the-hoop-client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bevy = "0.13.0"
clap = { version = "4.5.3", features = ["derive"] }
nope-the-hoop-proto = { version = "0.0.0", path = "../proto" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
