[package]
name = "nope-the-hoop-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["pin-project", "futures", "tokio"]

[dependencies]
anyhow = "1.0.75"
ciborium = "0.2.1"
pin-project = { version = "1", optional = true }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
