[package]
name = "nope-the-hoop-proto"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async = ["pin-project", "futures", "tokio"]

[dependencies]
anyhow = "1.0.81"
ciborium = "0.2.2"
pin-project = { version = "1", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
