[package]
name = "nope-the-hoop-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.1", features = ["server"] }
nope-the-hoop-proto = { version = "0.0.0", path = "../proto" }
tokio = { version = "1.34.0", features = ["full"] }
